# tower-rl

./: .gitignore  Cargo.toml  LICENSE  README.md  _build_apk.sh  build_all.sh  build_apk.sh  build_linux.sh  build_wasm.sh  build_win.sh  butler.sh  run_win.sh
.cargo/: config.toml
android_assets/native_activity/: .gitignore  settings.gradle
android_assets/native_activity/app/: build.gradle
android_assets/native_activity/app/src/androidTest/java/com/example/monktower/: ExampleInstrumentedTest.java
android_assets/native_activity/app/src/main/: AndroidManifest.xml
android_assets/native_activity/app/src/main/java/com/example/monktower/: MainActivity.java
android_assets/native_activity/app/src/main/java/com/maciejglowka/monk_tower/: MainActivity.java
android_assets/native_activity/app/src/main/java/com/maciejglowka/monktower/: MainActivity.java
android_assets/native_activity/app/src/main/res/values/: strings.xml  themes.xml
android_assets/native_activity/app/src/main/res/values-night/: themes.xml
android_assets/native_activity/app/src/test/java/com/example/monktower/: ExampleUnitTest.java
android_assets/native_activity/gradle/: libs.versions.toml
android_assets/native_activity/gradle/wrapper/: gradle-wrapper.properties
assets/data/: board_elements.yaml  discoverables.yaml  entities.csv  fixtures.yaml  info.yaml  items.yaml  levels.yaml  npcs.yaml  player.yaml  tiles.yaml  to_csv.py  traps.yaml  weapons.yaml
assets/sprites/: fog.afphoto  icons.afphoto  items.afphoto  tiles.afphoto  units.afphoto
assets/ui/: font.afphoto  sprites.afphoto
crates/hike/: Cargo.toml
crates/hike/src/: assets.rs  input.rs  lib.rs  main.rs  serialize.rs
crates/hike_audio/: Cargo.toml
crates/hike_audio/src/: lib.rs
crates/hike_data/: Cargo.toml
crates/hike_data/src/: colors.rs  lib.rs  settings.rs
crates/hike_game/: Cargo.toml
crates/hike_game/src/: actions.rs  board.rs  components.rs  consumables.rs  events.rs  globals.rs  items.rs  lib.rs  player.rs  structs.rs  systems.rs  utils.rs
crates/hike_graphics/: Cargo.toml
crates/hike_graphics/src/: globals.rs  lib.rs
crates/hike_graphics/src/crash_ui/: mod.rs
crates/hike_graphics/src/game_ui/: bubbles.rs  buttons.rs  context_menu.rs  game_end.rs  game_over.rs  help.rs  info.rs  input.rs  inventory.rs  messages.rs  mod.rs  modal.rs  overlays.rs  span.rs  status.rs  text_box.rs  utils.rs
crates/hike_graphics/src/graphics/: mod.rs  renderers.rs  utils.rs
crates/hike_graphics/src/title_ui/: mod.rs
crates/hike_graphics/src/ui/: bubbles.rs  buttons.rs  context_menu.rs  game_over.rs  help.rs  input.rs  inventory.rs  mod.rs  modal.rs  next.rs  overlays.rs  panels.rs  span.rs  status.rs  text_box.rs  utils.rs
crates/hlke/: Cargo.toml
crates/hlke/src/: input.rs  main.rs
crates/macroquad_sprites/: Cargo.toml
crates/macroquad_sprites/src/: assets.rs  errors.rs  lib.rs
crates/odyssey/: Cargo.toml
crates/odyssey/src/: input.rs  main.rs
crates/odyssey_data/: Cargo.toml
crates/odyssey_data/src/: lib.rs
crates/odyssey_game/: Cargo.toml
crates/odyssey_game/src/: _proximity.rs  abilities.rs  action_modifiers.rs  actions.rs  board.rs  cards.rs  components.rs  events.rs  globals.rs  lib.rs  player.rs  proximity.rs  systems.rs  utils.rs  wind.rs
crates/odyssey_graphics/: Cargo.toml
crates/odyssey_graphics/src/: globals.rs  lib.rs
crates/odyssey_graphics/src/graphics/: cursor.rs  mod.rs  renderers.rs
crates/odyssey_graphics/src/ui/: buttons.rs  cards.rs  input.rs  mod.rs  status.rs
docker/android/: Dockerfile  run.sh
docker/win/: Dockerfile
wasm-assets/: index.html
