[workspace]
members = ["crates/*"]
# workspace.resolver = "2"`

[workspace.dependencies]
# rogalik = { git = "https://github.com/maciekglowka/rogalik/", rev = "7fd8501cad7f1da115a93595947b4b36ad54bc90", features = ["serialize"] }
rogalik = { path = "../rogalik/", features = ["serialize"] }
rand = "0.8"
