[package]
name = "tower"
version = "0.1.2"
edition = "2021"

[lib]
crate_type=["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "tower"

[package.metadata.android]
# Specifies the array of targets to build for.
# build_targets = [ "aarch64-linux-android" ]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
resources = "../../android_assets"

[package.metadata.android.sdk]
min_sdk_version = 30
target_sdk_version = 31

[package.metadata.android.activity_attributes]
# "android:exported" =  "true"
"android:screenOrientation" = "userPortrait"

[package.metadata.android.signing.release]
path = "../../tower.keystore"
keystore_password = ""

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

[package.metadata.android.application.activity]
label = "Monk Tower"
always_retain_task_state = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik = { workspace = true }

hike_audio = { path = "../hike_audio" }
hike_data = { path = "../hike_data" }
hike_game = { path = "../hike_game" }
hike_graphics = { path = "../hike_graphics" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
