[package]
name = "tower"
version = "0.1.9"
edition = "2021"

[lib]
crate_type=["cdylib"]

[[bin]]
path = "src/lib.rs"
name = "tower"

# [package.metadata.android]
# package = "com.maciejglowka.monk_tower"
# build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
# resources = "../../android_assets"

# [package.metadata.android.sdk]
# min_sdk_version = 30
# target_sdk_version = 35

# [package.metadata.android.activity_attributes]
# # "android:exported" =  "true"
# "android:screenOrientation" = "userPortrait"

# [package.metadata.android.signing.release]
# path = "../../tower.keystore"
# keystore_password = ""

# [package.metadata.android.application]
# icon = "@mipmap/ic_launcher"
# theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

# [package.metadata.android.application.activity]
# label = "Monk Tower"
# always_retain_task_state = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik = { workspace = true }
# serde = { version = "1.0", features = ["derive"]}
# serde_yaml = "0.9"

hike_audio = { path = "../hike_audio" }
hike_data = { path = "../hike_data" }
hike_game = { path = "../hike_game" }
hike_graphics = { path = "../hike_graphics" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
