[package]
name = "hike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4" 
rogalik = { path = "../../../rogalik" }

macroquad_sprites = { path = "../macroquad_sprites" }
hike_data = { path = "../hike_data" }
hike_game = { path = "../hike_game" }
hike_graphics = { path = "../hike_graphics" }

