[package]
name = "macroquad_sprites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4" 
rogalik = { path = "../../../rogalik" }

odyssey_data = { path = "../odyssey_data" }
odyssey_graphics = { path = "../odyssey_graphics" }