[package]
name = "macroquad_sprites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4" 
rogalik = { git = "https://github.com/maciekglowka/rogalik.git" }

hike_data = { path = "../hike_data" }
hike_graphics = { path = "../hike_graphics" }