[package]
name = "odyssey_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogalik = { path = "../../../rogalik" }

odyssey_data = { path = "../odyssey_data" }
odyssey_game = { path = "../odyssey_game" }
